# llm_dissect

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
configs/: llama2_13b_mmlu.yaml  llama2_13b_per_attn.yaml  llama2_13b_zeroshot.yaml  llama2_70b_mmlu.yaml  llama2_70b_per_attn.yaml  llama2_70b_per_attn_mmlu.yaml  llama2_70b_zeroshot.yaml  llama2_7b_mmlu.yaml  llama2_7b_per_attn.yaml  llama2_7b_per_attn_mmlu.yaml  llama3_70b.yaml  llama3_70b_mmlu.yaml  llama3_70b_per_attn.yaml  llama3_70b_per_attn_mmlu.yaml  llama3_70b_per_attn_perp.yaml  llama3_8b.yaml  llama3_8b_mask_optim.yaml  llama3_8b_mmlu.yaml  llama3_8b_per_attn_mmlu.yaml  llama3_8b_per_attn_perp.yaml  llama3_8b_zeroshot.yaml  magnitude_vicuna.yaml  mixtral_8x7b.yaml  mixtral_8x7b_mmlu.yaml  mixtral_8x7b_per_attn.yaml  mixtral_8x7b_per_attn_mmlu.yaml  mixtral_8x7b_perp.yaml  prune_bert.yaml  prune_bert_weight_gradients.yaml  prune_llama.yaml  prune_llama_13b_per_attn.yaml  prune_llama_13b_per_attn_mmlu.yaml  prune_llama_70b.yaml  prune_llama_70b_per_attn.yaml  prune_llama_70b_per_attn_mmlu.yaml  prune_llama_per_attn.yaml  prune_llama_per_attn_mmlu.yaml  prune_vecuna.yaml  prune_vicuna.yaml  prune_vicuna_13b_per_attn.yaml  (+8 more)
dissect/: dissectors.py
prototypes/: exact_input_grad.py  forward_grad.py  test_exact_input_grad.py
scripts/: analyze_and_prune.py  apply_dissect.py  baseline_eval_pruned_models.py  batch_run.py  batch_run_eval.py  batch_run_prune_one_layer.py  check_layer_importance.py  estimate_shapley.py  eval_pruned_ft_model.py  eval_pruned_models.py  eval_pruned_models_compatible.py  gen_synthetic_stats.py  generate_layer_similarity_stats.py  (+30 more)
(+92 files in other folders)
