[build-system]
requires = [
  "wheel",
  "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "dissect"
version = "0.0.1"
authors = []
description = ""
readme = "README.md"
keywords = []
classifiers = []
requires-python = ">=3.8"
dependencies = [
    "torch",
    "tqdm",
    "torchvision",
    "numpy",
    "matplotlib",
    "transformers",
    "tokenizers",
    "mmengine",
    "alive-progress"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.black]
line-length = 120
target-version = ['py37', 'py39', 'py310', 'py311']

[tool.setuptools]
packages = ["dissect"]